Fixed bug #48770: when call_user_func() fails to call parent from inheriting class